[package]
name = "embassy-barista"
version = "0.1.0"
authors = ["Bernhard Leiner <bernhard@bernh.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "arch-riscv32",
] }
embassy-sync = "0.6.0"
embassy-time = "0.3.1"

embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"

esp-hal = { version = "0.19.0", features = ["esp32c3", "async"] }
esp-hal-embassy = { version = "0.2.0", features = ["esp32c3", "integrated-timers"]}
esp-backtrace = { version = "0.13.0", features = ["esp32c3", "exception-handler", "panic-handler", "println"] }
esp-println = { version = "0.10.0", features = ["esp32c3", "log"] }
esp-wifi = { version = "0.7.1", features = ["esp32c3", "wifi", "ble"] }

riscv-rt = "0.12.2"
log = { version = "0.4.21" }
static_cell = { version = "2.1.0", features = ["nightly"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"
debug = true

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
